GOLD MASTER READY TO SHIP

--- a/BreakoutMen/BreakoutMen.vcxproj
+++ b/BreakoutMen/BreakoutMen.vcxproj
@@ -153,7 +153,7 @@
     <ClInclude Include="Brick.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Paddle.h" />
-    <ClInclude Include="Utilities.h" />
+    <ClInclude Include="Renderer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Ball.cpp" />
@@ -161,7 +161,7 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Paddle.cpp" />
-    <ClCompile Include="Utilities.cpp" />
+    <ClCompile Include="Renderer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Font Include="Lato-Regular.ttf" />
